// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiPaymentDetail > should not render if not open 1`] = `<DocumentFragment />`;

exports[`MultiPaymentDetail > should render a modal 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-6 pb-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Transfer
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="no-ligatures css-1iw2tte"
              data-testid="TransactionSender"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 overflow-auto text-right md:text-left"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures css-9nx3be"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetailAddressList"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <span>
                      Recipients (0)
                    </span>
                    <div
                      class="hidden sm:inline-block"
                    >
                      <div
                        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
                        type="vertical"
                      />
                    </div>
                    <a
                      class="ring-focus group inline-block hidden sm:block css-7nwwrh"
                      data-ring-focus-margin="-m-1"
                      data-testid="Link"
                      href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      rel="noopener noreferrer"
                    >
                      <span
                        class="css-170792"
                      >
                        View Full List
                      </span>
                      <div
                        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                        data-testid="Link__external"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="arrow-external"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </a>
                  </div>
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="hidden w-0 flex-1 text-right sm:block md:text-left"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    />
                  </div>
                  <a
                    class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="css-170792"
                    >
                      View Full List
                    </span>
                    <div
                      class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                      data-testid="Link__external"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="arrow-external"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="hidden items-center sm:flex -space-x-1"
              >
                <div
                  class="shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  />
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionAmount"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Total Amount
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex h-full items-center space-x-1"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-theme-danger-100 text-theme-danger-500 dark:border-theme-danger-400 dark:text-theme-danger-400 ring-theme-background duration-100 css-1nqcsx"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="sent"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionFee"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionMemo"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Memo
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <p
                    class="whitespace-pre-line break-all"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="file-lines"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 14h3.5M7 11h6M7 8h6M3 17.4c0 .9.667 1.6 1.429 1.6h-.096 11.143c.857 0 1.524-.8 1.524-1.6V2.6c0-.9-.762-1.6-1.524-1.6h0-7.905c-.38 0-.761.1-1.142.4L3.38 4.6C3 5 3 5.4 3 5.8v11.6z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionTimestamp"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
                  >
                    <div
                      class="text-theme-warning-300 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="clock"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-miterlimit="10"
                          stroke-width="2"
                          transform="translate(1.5 1.5)"
                        >
                          <circle
                            cx="8.5"
                            cy="8.5"
                            r="9"
                          />
                          <path
                            d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                          />
                        </g>
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex w-full items-center space-x-3 overflow-hidden"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <span
                            class="no-ligatures css-0"
                            data-testid="TruncateMiddle"
                          >
                            ea63bf9a4b3eaf75a1dfff7219…7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="copy"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail > should render hint icon with tooltip when it's a returned transaction 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-6 pb-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Transfer
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="no-ligatures css-1iw2tte"
              data-testid="TransactionSender"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 overflow-auto text-right md:text-left"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures css-9nx3be"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetailAddressList"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <span>
                      Recipients (3)
                    </span>
                    <div
                      class="hidden sm:inline-block"
                    >
                      <div
                        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
                        type="vertical"
                      />
                    </div>
                    <a
                      class="ring-focus group inline-block hidden sm:block css-7nwwrh"
                      data-ring-focus-margin="-m-1"
                      data-testid="Link"
                      href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      rel="noopener noreferrer"
                    >
                      <span
                        class="css-170792"
                      >
                        View Full List
                      </span>
                      <div
                        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                        data-testid="Link__external"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="arrow-external"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </a>
                  </div>
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="hidden w-0 flex-1 text-right sm:block md:text-left"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                  <a
                    class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="css-170792"
                    >
                      View Full List
                    </span>
                    <div
                      class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                      data-testid="Link__external"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="arrow-external"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="hidden items-center sm:flex -space-x-1"
              >
                <div
                  class="shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionAmount"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Total Amount
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex h-full items-center justify-center rounded pr-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex h-full items-center space-x-1"
                    >
                      <div
                        aria-describedby="tippy-16"
                        class="flex items-center justify-center bg-theme-danger-info-border text-theme-danger-info-text dark:text-white/70 -ml-1.5 px-2"
                        data-testid="AmountLabel__hint"
                      >
                        <div
                          class="dark:text-white css-15txs7d"
                          height="10"
                          width="10"
                        >
                          <svg
                            id="hint-small"
                            viewBox="0 0 10 10"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M7 9H5.503A.503.503 0 0 1 5 8.497V4.503A.503.503 0 0 0 4.497 4H3.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                            <circle
                              cx="4.5"
                              cy="1"
                              fill="currentColor"
                              r="1"
                            />
                          </svg>
                        </div>
                      </div>
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-theme-danger-100 text-theme-danger-500 dark:border-theme-danger-400 dark:text-theme-danger-400 ring-theme-background duration-100 css-1nqcsx"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="sent"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionFee"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionMemo"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Memo
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <p
                    class="whitespace-pre-line break-all"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="file-lines"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 14h3.5M7 11h6M7 8h6M3 17.4c0 .9.667 1.6 1.429 1.6h-.096 11.143c.857 0 1.524-.8 1.524-1.6V2.6c0-.9-.762-1.6-1.524-1.6h0-7.905c-.38 0-.761.1-1.142.4L3.38 4.6C3 5 3 5.4 3 5.8v11.6z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionTimestamp"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
                  >
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                    <span>
                      Confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex w-full items-center space-x-3 overflow-hidden"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <span
                            class="no-ligatures css-0"
                            data-testid="TruncateMiddle"
                          >
                            ea63bf9a4b3eaf75a1dfff7219…7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="copy"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail > should render with recipients 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-6 pb-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 mt-1 text-lg font-bold md:pt-0 md:text-2xl"
          >
            Transfer
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="no-ligatures css-1iw2tte"
              data-testid="TransactionSender"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 overflow-auto text-right md:text-left"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures css-9nx3be"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetailAddressList"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <span>
                      Recipients (3)
                    </span>
                    <div
                      class="hidden sm:inline-block"
                    >
                      <div
                        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
                        type="vertical"
                      />
                    </div>
                    <a
                      class="ring-focus group inline-block hidden sm:block css-7nwwrh"
                      data-ring-focus-margin="-m-1"
                      data-testid="Link"
                      href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      rel="noopener noreferrer"
                    >
                      <span
                        class="css-170792"
                      >
                        View Full List
                      </span>
                      <div
                        class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                        data-testid="Link__external"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="arrow-external"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </a>
                  </div>
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="hidden w-0 flex-1 text-right sm:block md:text-left"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        adsad12312xsd1w312e1s13203e12
                      </span>
                    </div>
                  </div>
                  <a
                    class="ring-focus group inline-block block w-32 sm:hidden css-7nwwrh"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="css-170792"
                    >
                      View Full List
                    </span>
                    <div
                      class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                      data-testid="Link__external"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="arrow-external"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="hidden items-center sm:flex -space-x-1"
              >
                <div
                  class="shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="adsad12312xsd1w312e1s13203e12"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(205, 220, 57)" width="100" height="100"/><circle r="55" cx="80" cy="50" fill="rgb(233, 30, 99)"/><circle r="60" cx="70" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="40" fill="rgb(103, 58, 183)"/></svg>"
                      title="adsad12312xsd1w312e1s13203e12"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionAmount"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Total Amount
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex h-full items-center space-x-1"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-theme-danger-100 text-theme-danger-500 dark:border-theme-danger-400 dark:text-theme-danger-400 ring-theme-background duration-100 css-1nqcsx"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="sent"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionFee"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionMemo"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Memo
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <p
                    class="whitespace-pre-line break-all"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="file-lines"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 14h3.5M7 11h6M7 8h6M3 17.4c0 .9.667 1.6 1.429 1.6h-.096 11.143c.857 0 1.524-.8 1.524-1.6V2.6c0-.9-.762-1.6-1.524-1.6h0-7.905c-.38 0-.761.1-1.142.4L3.38 4.6C3 5 3 5.4 3 5.8v11.6z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionTimestamp"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
                  >
                    <div
                      class="text-theme-success-600 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="circle-check-mark"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-width="2"
                        >
                          <circle
                            cx="10"
                            cy="10"
                            r="9"
                            stroke-miterlimit="10"
                          />
                          <path
                            d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </g>
                      </svg>
                    </div>
                    <span>
                      Confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-qu17s6"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex w-full items-center space-x-3 overflow-hidden"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex items-center css-7nwwrh"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-170792"
                        >
                          <span
                            class="no-ligatures css-0"
                            data-testid="TruncateMiddle"
                          >
                            ea63bf9a4b3eaf75a1dfff7219…7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="arrow-external"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <path
                              d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="copy"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
